--- a/settings.html
+++ b/settings.html
@@ -108,6 +108,12 @@
       <td><input type="button" value="Change date and time" onclick="javascript:setDate()"></td>
     </tr>
     <tr>
+      <form action="upload" method="post" enctype="multipart/form-data">
+        <td><input id="fileLocation" type="file" name="importFile"></td>
+        <td><input type="submit" value="Import .xls" name="submit"></td>
+        <td>Upload data file</td>
+      </form>
+    <tr>
       <td><input type="button" value="Save settings and restart" onclick="javascript:setSettings()"></td>
       <td><input type="button" value="Cancel" onclick="javascript:goDebug()"></td>
     </tr>
