added jquery locally

--- a/debug.html
+++ b/debug.html
@@ -39,7 +39,7 @@
     <img id = "logo" src = "/res/mbdc.jpg">
   </div>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+  <script src="/res/jquery-1.11.1.js"></script>
   <script src="/config.js"></script>
   <script>
     function goSettings(){
