--- a/settings.html
+++ b/settings.html
@@ -121,7 +121,7 @@
 </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+  <script src="/res/jquery-1.11.1.js"></script>
   <script src="/config.js"></script>
   <script type="text/javascript">
     for (var i = 0; i < 2; i++)
