--- a/debug.html
+++ b/debug.html
@@ -6,9 +6,11 @@
       * { margin: 0; padding: 0; box-sizing: border-box;}
       body { font-style: : Helvetica, Arial; font-size: 0px;}
       table { width: 100%; text-align: center; border: none; border-collapse: collapse;}
-      tr { height: 30px; }
-      td { text-align: center; font-size: 20px; border-style: bold; }
-      .header { background-color: yellow;}
+      tr { height: 29px; }
+      td { text-align: center; font-size: 25px; border-style: bold; }
+	  .excelTopRow {background-color: cyan; }
+	  .excel {font-weight: bold;}
+      .header { background-color: yellow; font-weight: bold;}
       .result { background-color: #98FB98;}
       .buttons {position: fixed; right: 0; top: 30px; font-size:20px;}
       .logo {position: fixed; left: 0; top: 30px;}
@@ -26,9 +28,9 @@
       <td class="header" id="headerqs"></td>
     </tr>
   </table>
-  <div id = "excelEntries" class="excelEntries">
-  </div>
   <div class = "buttons">
+	<img id = "uploadButton" src = "/res/upload.png" height="30" width="30" onclick="javascript:goFileUpload()">
+	
     <img src = "/res/settings.svg" height="30" width="30" onclick="javascript:goSettings()">
 
     <img src = "/res/restart.ico"  height="30" width="30" onclick="javascript:goRestart()">
@@ -57,6 +59,12 @@
     function goRestart(){
       if (confirm("Do you really want to restart?")){
         window.location.href = '/restart'; //relative to domain
+      }
+    }
+	
+	function goFileUpload(){
+      if (confirm("Do you really want to upload a file?")){
+        window.location.href = '/fileupload'; //relative to domain
       }
     }
 
@@ -105,6 +113,31 @@
           row.append($('<td>').attr('id', conf.name + 'avg'));
       }
     }
+	
+	if (!config.exposeUpload){
+		$('#uploadButton').remove();
+	}
+	else 
+	{
+		$('#content').append($('<tr>'));
+	var excelTopRow = $('<tr>').addClass('excelTopRow excel');
+	var excelBottomRow = $('<tr>').addClass('excel');
+	$('#content').append(excelTopRow);
+	$('#content').append(excelBottomRow);
+	excelTopRow.append($('<td>').html('ID'));
+	excelTopRow.append($('<td>').html('Age'));
+	excelTopRow.append($('<td>').html('Teats'));
+	excelTopRow.append($('<td>').html('Index'));
+	excelTopRow.append($('<td>').html('Life Gain'));
+	excelBottomRow.append($('<td>').attr('id', 'excelRFID'));
+	excelBottomRow.append($('<td>').attr('id', 'excelBirthDate'));
+	excelBottomRow.append($('<td>').attr('id', 'excelNumTeats'));
+	excelBottomRow.append($('<td>').attr('id', 'excelIndex'));
+	excelBottomRow.append($('<td>').attr('id', 'excelGrowthRate'));
+	}
+	
+
+
 
     var socket = io();
     var previousEntry = [];
@@ -120,7 +153,7 @@
           break;  //store value of i for correct serial entry
         
       var date = new Date()
-      if (msg.entry==previousEntry[i] && date.getTime()<previousTime[i] + config.serial[i].timeout)
+      if (msg.entry==previousEntry[i] && date.getTime()<previousTime[i] + config.serial[i].timeout*1000)
         return;
 
       previousTime[i]=date.getTime();
@@ -140,8 +173,20 @@
     });
 
     socket.on('excelEntry', function(msg){
-      let birthDate = printDate(msg.birthDate*86400*1000);
-      $('#excelEntries').html(`RFID: ${msg.RFID}, Geboorte datum: ${birthDate}, Aantal spenen: ${msg.aantalSpenen}, Index: ${msg.index}, Levensgroei: ${msg.growthRate}`);
+	  if (msg.RFID !== 'Not found'){
+		  $('#excelRFID').html(msg.RFID);
+		  $('#excelBirthDate').html(Math.floor(msg.age).toString() || '');
+		  $('#excelNumTeats').html(msg.aantalSpenen);
+		  $('#excelIndex').html(msg.index);
+		  $('#excelGrowthRate').html(msg.growthRate);
+	} else {
+		$('#excelRFID').html(msg.RFID);
+		  $('#excelBirthDate').html('');
+		  $('#excelNumTeats').html('');
+		  $('#excelIndex').html('');
+		  $('#excelGrowthRate').html('');
+	}
+	  console.log('got excel entry');
     });
 
     socket.on('average', function(msg){
