--- a/settings.html
+++ b/settings.html
@@ -73,6 +73,11 @@
       <td>Take average</td>
     </tr>
     <tr>
+      <td><input type="checkbox" id="alwaysPositive0"></td>
+      <td><input type="checkbox" id="alwaysPositive1"></td>
+      <td>Always positive</td>
+    </tr>
+    <tr>
       <td><input type="number" id="timeout0" min="0" step="1"></td>
       <td><input type="number" id="timeout1" min="0" step="1"></td>
       <td>Timeout in seconds</td>
